markdown: fix embeds stretching mobile view

--- a/frontend/src/components/common/WalkthroughContent/index.module.css
+++ b/frontend/src/components/common/WalkthroughContent/index.module.css
@@ -9,6 +9,5 @@
 
 .embedWrapper {
   --video-embed-width: 100%;
-  --video-embed-height: 100%;
   --video-embed-aspect-ratio: 16 / 9;
 }
